--- a/animals.html
+++ b/animals.html
@@ -8,15 +8,23 @@
         @gray-lighter:              #ececec;
         @gray-lightest:             lighten(@gray-lighter,4%);
 
+
         html {
           background-color: #FFF;
         }
 
         body {
-          font-family: "Courier New", monospace;
-          background-color: #FFEFD5;
-          margin: 0;
+          font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
+          font-size: 40px;
+          letter-spacing: 0;
           padding: 2rem;
+          background-color: #FFEFD5;
+          text-rendering: optimizeLegibility;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          -moz-font-feature-settings: "liga" on;
+          width: 900px;
+          margin-bottom: 2rem;
         }
 
         h1 {
@@ -38,8 +46,9 @@
 
         .cards__item {
           background-color: #FFFAF0;
-          border-radius: 16px;
-          box-shadow: 0 2px 12px rgba(0,0,0,0.1);
+          border-radius: 0.25rem;
+          box-shadow: 0 2px 15px rgba(0,0,0,0.25);
+          overflow: hidden;
           padding: 1.5rem;
           width: 300px;
           transition: transform 0.2s;
@@ -50,21 +59,18 @@
         }
 
         .card__title {
-          font-size: 1.4rem;
+          color: @gray-dark;
+          font-size: 1.35rem;
           font-weight: bold;
           margin-bottom: 1rem;
-          color: #444444;
+          text-transform: uppercase;
         }
 
-        .card__text ul {
-          padding: 0;
-          margin: 0;
-        }
-
-        .card__text li {
-          margin: 0.5rem 0;
+        .card__text {
+          flex: 1 1 auto;
           font-size: 0.95rem;
-          color: #28282B;
+          line-height: 2;
+          margin-bottom: 1.25rem;
         }
         </style>
     </head>
@@ -76,9 +82,13 @@
     <div class="card__title">American Foxhound</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BlackWhiteTan</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> North-America</li>
+        <li><strong>Type:</strong> Hound</li>
         <li><strong>Lifespan:</strong> 10 to 12 years</li>
+        <li><strong>Group:</strong> Dog</li>
+        <li><strong>Color:</strong> BlackWhiteTan</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -88,14 +98,12 @@
     <div class="card__title">Arctic Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> GreyBlackWhite</li>
+        <li><strong>Diet:</strong> Carnivore</li>
         <li><strong>Location:</strong> Eurasia</li>
-        <li><strong>Habitat:</strong> Polar forest regions</li>
-        <li><strong>Predators:</strong> Snowy Owl, Wolf, Polar Bear</li>
-        <li><strong>Weight:</strong> 1.4kg - 9.4kg (3lbs - 21lbs)</li>
-        <li><strong>Length:</strong> 70cm - 110cm (28in - 43in)</li>
-        <li><strong>top_speed:</strong> 30 mph</li>
+        <li><strong>Type:</strong> Mammal</li>
         <li><strong>Lifespan:</strong> 7 - 10 years</li>
+        <li><strong>Color:</strong> GreyBlackWhite</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -105,15 +113,12 @@
     <div class="card__title">Cross Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> RedBlackSilver</li>
-        <li><strong>Signature:</strong> The cross on its back.</li>
+        <li><strong>Diet:</strong> Carnivore</li>
         <li><strong>Location:</strong> North-America</li>
-        <li><strong>Habitat:</strong> Forests, prairies, deserts, mountains, cities, suburbs, tundra, scrub, near rivers, farms</li>
-        <li><strong>Prey:</strong> Birds, small mammals, insects, spiders, worms, reptiles</li>
-        <li><strong>Predators:</strong> Gray wolves, coyotes, eagles, bears, humans and cougars</li>
-        <li><strong>Length:</strong> 18 to 35 inches with 12 to 22 inch long tails, males a bit larger</li>
-        <li><strong>top_speed:</strong> 31 mph</li>
+        <li><strong>Type:</strong> mammal</li>
         <li><strong>Lifespan:</strong> 10 to 15 years in captivity, seven years in the wild</li>
+        <li><strong>Color:</strong> RedBlackSilver</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -123,15 +128,12 @@
     <div class="card__title">Darwin's fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> GreyRedBlack</li>
-        <li><strong>Signature:</strong> Its small size</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> South-America</li>
-        <li><strong>Habitat:</strong> Temperate rainforests, shrubland</li>
-        <li><strong>Prey:</strong> Small mammals, reptiles, insects and other invertebrates</li>
-        <li><strong>Weight:</strong> 4 to 8.7 pounds</li>
-        <li><strong>Length:</strong> 20.79 inches</li>
-        <li><strong>top_speed:</strong> 45 mph</li>
+        <li><strong>Type:</strong> Mammal</li>
         <li><strong>Lifespan:</strong> Seven years</li>
+        <li><strong>Color:</strong> GreyRedBlack</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -141,10 +143,11 @@
     <div class="card__title">English Foxhound</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BlackWhiteTanMulti-colored</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Europe</li>
-        <li><strong>Weight:</strong> 75 pounds</li>
         <li><strong>Lifespan:</strong> 10 to 13 years</li>
+        <li><strong>Color:</strong> BlackWhiteTanMulti-colored</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -154,15 +157,12 @@
     <div class="card__title">Fennec Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> WhiteCreamSandy</li>
-        <li><strong>Signature:</strong> Large, over-sized ears</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Africa</li>
-        <li><strong>Habitat:</strong> Sandy and semi-arid desert</li>
-        <li><strong>Prey:</strong> Berries, Fruit, Rodents, Reptiles</li>
-        <li><strong>Weight:</strong> 1kg - 1.5kg (2.2lbs - 3.3lbs)</li>
-        <li><strong>Length:</strong> 24cm -41cm (9in - 16in)</li>
-        <li><strong>top_speed:</strong> 25 mph</li>
         <li><strong>Lifespan:</strong> 10 - 14 years</li>
+        <li><strong>Group:</strong> Mammal</li>
+        <li><strong>Color:</strong> WhiteCreamSandy</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -172,14 +172,12 @@
     <div class="card__title">Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownRedBlackTan</li>
+        <li><strong>Diet:</strong> Carnivore</li>
         <li><strong>Location:</strong> Africa</li>
-        <li><strong>Habitat:</strong> Woodland areas and urban parks</li>
-        <li><strong>Predators:</strong> Human, Bears, Eagles</li>
-        <li><strong>Weight:</strong> 5kg - 11kg (11lbs - 24lbs)</li>
-        <li><strong>Length:</strong> 40cm - 83cm (16in - 33in)</li>
-        <li><strong>top_speed:</strong> 29 mph</li>
+        <li><strong>Type:</strong> Mammal</li>
         <li><strong>Lifespan:</strong> 3 - 11 years</li>
+        <li><strong>Color:</strong> BrownRedBlackTan</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -189,12 +187,11 @@
     <div class="card__title">Fox Snakes</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownGreyBeigeChestnut</li>
-        <li><strong>Signature:</strong> Copper or bronze-colored head</li>
+        <li><strong>Diet:</strong> Carnivore</li>
         <li><strong>Location:</strong> North-America</li>
-        <li><strong>Prey:</strong> Mice, rats, young rabbits, ground-nesting birds and sometimes their eggs, frogs, lizards</li>
-        <li><strong>Predators:</strong> Foxes, coyotes, hawks.</li>
         <li><strong>Lifespan:</strong> approximately 20 years</li>
+        <li><strong>Color:</strong> BrownGreyBeigeChestnut</li>
+        <li><strong>Skin Type:</strong> Scales</li>
       </ul>
     </div>
   </div>
@@ -204,15 +201,13 @@
     <div class="card__title">Fox Squirrel</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownGrey-Brown</li>
-        <li><strong>Signature:</strong> Large size and large, bushy tail</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Central-America</li>
-        <li><strong>Habitat:</strong> Leaf nests and tree dens</li>
-        <li><strong>Prey:</strong> Insects, bird eggs</li>
-        <li><strong>Predators:</strong> Birds of prey, carnivorous mammals</li>
-        <li><strong>Length:</strong> 21 inches</li>
-        <li><strong>top_speed:</strong> 17 mph</li>
+        <li><strong>Type:</strong> rodent</li>
         <li><strong>Lifespan:</strong> 6-12.6 years</li>
+        <li><strong>Group:</strong> social</li>
+        <li><strong>Color:</strong> BrownGrey-Brown</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -222,9 +217,11 @@
     <div class="card__title">Fox Terrier</div>
     <div class="card__text">
       <ul class="card__list">
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Europe</li>
-        <li><strong>Weight:</strong> 8kg (18lbs)</li>
         <li><strong>Lifespan:</strong> 14 years</li>
+        <li><strong>Group:</strong> Terrier</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -234,13 +231,12 @@
     <div class="card__title">Golden-Crowned Flying Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BlackGold</li>
-        <li><strong>Signature:</strong> Soft golden cap</li>
+        <li><strong>Diet:</strong> Herbivore</li>
         <li><strong>Location:</strong> Asia</li>
-        <li><strong>Habitat:</strong> Caves and forests</li>
-        <li><strong>Predators:</strong> Reticulated pythons, eagles, humans</li>
-        <li><strong>Weight:</strong> 3.1 pounds</li>
         <li><strong>Lifespan:</strong> unknown</li>
+        <li><strong>Group:</strong> They live in large gatherings in the woods</li>
+        <li><strong>Color:</strong> BlackGold</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -250,15 +246,12 @@
     <div class="card__title">Gray Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> GreyRedBlackWhite</li>
-        <li><strong>Signature:</strong> The silver gray coat of fur</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Central-America</li>
-        <li><strong>Habitat:</strong> Forests and plains</li>
-        <li><strong>Prey:</strong> Rodents, birds, insects, and fruit</li>
-        <li><strong>Weight:</strong> 3.2-6.4kg (7-14lbs)</li>
-        <li><strong>Length:</strong> 89-105cm (35-41in)</li>
-        <li><strong>top_speed:</strong> 28 mph</li>
+        <li><strong>Type:</strong> Mammal</li>
         <li><strong>Lifespan:</strong> 6-12 years</li>
+        <li><strong>Color:</strong> GreyRedBlackWhite</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -268,16 +261,13 @@
     <div class="card__title">Kit Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> GreyYellowBlackWhite</li>
-        <li><strong>Signature:</strong> tiny bodies and enormous ears</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Central-America</li>
-        <li><strong>Habitat:</strong> desert, grasslands</li>
-        <li><strong>Prey:</strong> kangaroo rat, cottontail, jackrabbit, reptiles, insects, birds</li>
-        <li><strong>Predators:</strong> coyotes, bobcats, red foxes, birds of prey</li>
-        <li><strong>Weight:</strong> 4.5 to five pounds</li>
-        <li><strong>Length:</strong> 20 inches (body), 12 inches (tail)</li>
-        <li><strong>top_speed:</strong> 25 mph</li>
+        <li><strong>Type:</strong> mammal</li>
         <li><strong>Lifespan:</strong> seven years in the wild. 12 years in captivity</li>
+        <li><strong>Group:</strong> solitary</li>
+        <li><strong>Color:</strong> GreyYellowBlackWhite</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -287,16 +277,12 @@
     <div class="card__title">Marble Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownBlackWhite</li>
-        <li><strong>Signature:</strong> The marble-colored coat</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> North-America</li>
-        <li><strong>Habitat:</strong> Human captivity</li>
-        <li><strong>Prey:</strong> Rodents, birds, reptiles, insects, and more</li>
-        <li><strong>Predators:</strong> None in captivity</li>
-        <li><strong>Weight:</strong> 1-10kg (3-21lbs)</li>
-        <li><strong>Length:</strong> Up to 63cm (25in) in body length, not including the tail</li>
-        <li><strong>top_speed:</strong> 30 mph</li>
+        <li><strong>Type:</strong> Mammal</li>
         <li><strong>Lifespan:</strong> Up to 15 years</li>
+        <li><strong>Color:</strong> BrownBlackWhite</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -306,16 +292,11 @@
     <div class="card__title">Red Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownGreyRedBlackSilver</li>
-        <li><strong>Signature:</strong> The bushy tail</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Africa</li>
-        <li><strong>Habitat:</strong> Forests, grasslands, tundra, prairie, deserts, and mountains</li>
-        <li><strong>Prey:</strong> Rabbits, mice, voles, birds, frogs, fish, eggs, and fruits and vegetables</li>
-        <li><strong>Predators:</strong> Wolves, cougars, lynxes, bobcats, eagles, and owls</li>
-        <li><strong>Weight:</strong> 6.5-24 lbs</li>
-        <li><strong>Length:</strong> 36-42 inches</li>
-        <li><strong>top_speed:</strong> 31 mph</li>
         <li><strong>Lifespan:</strong> 2-4 years in the wild, 10-12 in captivity</li>
+        <li><strong>Color:</strong> BrownGreyRedBlackSilver</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -325,9 +306,11 @@
     <div class="card__title">Smooth Fox Terrier</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BrownBlackWhiteTan</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Europe</li>
-        <li><strong>Lifespan:</strong> 12 - 15 years</li>
+        <li><strong>Lifespan:</strong> 12 – 15 years</li>
+        <li><strong>Color:</strong> BrownBlackWhiteTan</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -337,15 +320,12 @@
     <div class="card__title">Tibetan Fox</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> GreyTan</li>
-        <li><strong>Signature:</strong> Square-shaped skull</li>
+        <li><strong>Diet:</strong> Carnivore</li>
         <li><strong>Location:</strong> Asia</li>
-        <li><strong>Habitat:</strong> Tibetan Plateau</li>
-        <li><strong>Predators:</strong> Humans</li>
-        <li><strong>Weight:</strong> 8-12 lbs (4-5 kg)</li>
-        <li><strong>Length:</strong> 24-28 in (60-70 cm)</li>
-        <li><strong>top_speed:</strong> 44 mph</li>
-        <li><strong>Lifespan:</strong> 8 - 10 years</li>
+        <li><strong>Type:</strong> Mammal</li>
+        <li><strong>Lifespan:</strong> 8-10 years</li>
+        <li><strong>Color:</strong> GreyTan</li>
+        <li><strong>Skin Type:</strong> Fur</li>
       </ul>
     </div>
   </div>
@@ -355,10 +335,11 @@
     <div class="card__title">Toy Fox Terrier</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BlackWhiteTanChocolate</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> North-America</li>
-        <li><strong>Weight:</strong> 13 pounds</li>
-        <li><strong>Lifespan:</strong> 11 - 14 years</li>
+        <li><strong>Lifespan:</strong> 11-14 years</li>
+        <li><strong>Color:</strong> BlackWhiteTanChocolate</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
@@ -368,10 +349,11 @@
     <div class="card__title">Wire Fox Terrier</div>
     <div class="card__text">
       <ul class="card__list">
-        <li><strong>Color:</strong> BlackWhiteTan</li>
+        <li><strong>Diet:</strong> Omnivore</li>
         <li><strong>Location:</strong> Europe</li>
-        <li><strong>Weight:</strong> 19 lbs</li>
-        <li><strong>Lifespan:</strong> 13 - 14 years</li>
+        <li><strong>Lifespan:</strong> 13 – 14 years</li>
+        <li><strong>Color:</strong> BlackWhiteTan</li>
+        <li><strong>Skin Type:</strong> Hair</li>
       </ul>
     </div>
   </div>
